# actix-web-test

./: Cargo.toml  diesel.toml
migrations/2021-06-15-080550_save_ccs/: down.sql  up.sql
migrations/2021-07-21-043559_save_ccs/: down.sql  up.sql
public/: index.html  post_test.html  sql.html  style.css
public/posts/diesel_tutorial/: index.html
public/posts/sql/: index.html
src/: handlers.rs  main.rs  models.rs
stuff/: connection.rs  handlers.rs  lib.rs  models.rs  schema.rs
stuff/actix_stuff/: handlers.rs
stuff/diesel_stuff/: connection.rs  models.rs
