[package]
name = "actix-test2"
version = "0.1.0"
authors = ["AOx0 <50227494+AOx0@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "stuff"
path = "stuff/lib.rs"

[[bin]]
name = "page"
path = "src/main.rs"

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"

serde = "1.0.126"
serde_json = "1.0.64"

diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"

lazy_static = "1.4.0"